--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>hello world</h1>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=favicon.ico><title>vue-auth</title><link href=css/app.e2713bb0.css rel=preload as=style><link href=js/app.3edb544e.js rel=preload as=script><link href=js/chunk-vendors.9f49c8ad.js rel=preload as=script><link href=css/app.e2713bb0.css rel=stylesheet></head><body><noscript><strong>We're sorry but vue-auth doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=js/chunk-vendors.9f49c8ad.js></script><script src=js/app.3edb544e.js></script></body></html>
